# grasp

./: .mcp.json  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: tmif.md
docs/install/: antigravity.md  chatgpt.md  claude-code.md  claude-desktop.md  claude-for-work.md  codex.md  gemini-cli.md  grok-build.md
docs/tmif/: claimant-public-key.jwk.json  grasp-tmif-claimant.json  grasp-tmif-claimant.jws
grasp/: __init__.py  activate.py  card.py  cite_verify.py  cli.py  context_chain.py  context_head.py  footer.py  home.py  honesty.py  idr.py  idr_forest.py  keys.py  legal_receipt.py  mcp_server.py  merkle.py  prove_it.py  provenance.py  verdict.py  wizard.py
grasp/storage/: __init__.py  ipfs.py  local.py  ots.py  s3.py  sepolia.py  website.py
skills/grasp-provenance/: SKILL.md
tests/: conftest.py  test_activate.py  test_card.py  test_cite_verify.py  test_context_chain.py  test_footer.py  test_honesty.py  test_idr.py  test_idr_forest.py  test_install_surfaces.py  test_legal_receipt.py  test_mcp_server.py  test_merkle.py  test_plugin_usage_regressions.py  test_prove_it.py  test_provenance.py  test_storage.py  test_storage_adapters.py  test_storage_website.py  test_wizard.py
tools/: grasp-verify-receipt
